[tool.poetry]
name = "airpro"
version = "0.1.0"
description = ""
authors = ["B7W <b7w@isudo.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.2"
pysmb = "^1.2"
fastapi = "^0.110"
uvicorn = "^0.29"
clickhouse-driver = "^0.2"

[tool.poetry.dev-dependencies]
pytest = "^8"

[tool.poetry.scripts]
airpro = 'airpro.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
