[tool.poetry]
name = "airpro"
version = "0.1.0"
description = ""
authors = ["B7W <b7w@isudo.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.8.1"
pysmb = "^1.2.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
clickhouse-driver = "^0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8"

[tool.poetry.scripts]
airpro = 'airpro.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
